--- a/Analise4 (20).Rmd
+++ b/Analise4 (20).Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Análise da fila de atendimento"
+title: "Análise da fila de atendimento (restrita ao horário de pico 20h)"
 output: pdf_document
 ---
 
@@ -9,7 +9,6 @@ library(plyr)
 library(ggplot2)
 library(VGAM)
 require(scales)
-setwd("C:\\Users\\i826950\\Desktop\\Personal\\Unisinos\\model&simul")
 ```
 
 ##Carga e Transformação
@@ -18,7 +17,7 @@ setwd("C:\\Users\\i826950\\Desktop\\Personal\\Unisinos\\model&simul")
 #le dados de entrada
 data <- read.csv("data.csv", stringsAsFactors = F, sep = ";")
 #data <- head(data, 10)
-nrow(data)
+#nrow(data)
 
 #transforma data/hora de entrada em timestamp 
 data$arrivalTimestamp <- as.POSIXct(strptime(with(data, paste(Data, Hora.Chegada)), "%Y/%m/%d %H:%M:%S"))
@@ -27,8 +26,18 @@ data$servStartTimestamp <- as.POSIXct(strptime(with(data, paste(Data, Hora.Chama
 #calcula o turno
 data$turno <- as.factor(floor(as.numeric(format(data$arrivalTimestamp, "%H"))/6))
 
+data$prefer <- substr(data$Chamada, 2, 2)=="P"
+
 #transforma Guiche em variavel categórica
 data$Guiche <- as.factor(data$Guiche)
+
+#extrai tipo de atendimento
+data$Tipo <- as.factor(
+  substr(data$Chamada, 1, attr(regexpr("^[A-Z]{1,2}", data$Chamada), "match.length")))
+# table(data$Tipo)
+# midpoints <- barplot(as.data.frame(table(data$Tipo))$Freq,
+#         names.arg=as.data.frame(table(data$Tipo))$Var1)
+# text(midpoints, 200, labels=as.data.frame(table(data$Tipo))$Freq)
 
 #calcula o tempo na fila
 data$waitingTime <- data$servStartTimestamp - data$arrivalTimestamp
@@ -36,29 +45,28 @@ data$waitingTime <- data$servStartTimestamp - data$arrivalTimestamp
 #calcula o tempo de atendimento
 data <- data[with(data, order(Guiche, servStartTimestamp)), ]
 data <- ddply(data, .(format(servStartTimestamp, "%Y/%m/%d"), Guiche), mutate, servDuration = c(as.numeric(diff(servStartTimestamp), units = "secs"), NA))
-```
+data <- data[,-1]
 
-##Distribuição de chegada 
-```{r dist_chegada}
 #ordena por hora de chegada para cálculo da diferença de chegada
 data <- data[order(data$arrivalTimestamp),]
 data$timediff <- c(Inf, diff(data$arrivalTimestamp))
 
-#ajusta as diferenças de chegada que tenham mais de 6 horas (dia anterior) usando a respectiva moda
-temp <- data[data$timediff<21600, ]
-Mode <- function(x) {
-  ux <- unique(x)
-  ux[which.max(tabulate(match(x, ux)))]
-}
-temp <- ddply(temp, .(hora=format(arrivalTimestamp, "%H")), summarize, moda=Mode(timediff))
-data[data$timediff>21600, "timediff"] <- temp[match(format(data[data$timediff>21600, "arrivalTimestamp"], "%H"), temp$hora),"moda"]
-remove(temp, Mode)
-#summary(data$timediff)
+#filtra apenas os registros com tempo de servico válido
+data <- data[!is.na(data$servDuration), ]
 
-#hist(data[, "timediff"], breaks=seq(0, 7200, 30), xlim=c(0,1200))
-#hist(data[format(data$arrivalTimestamp, "%H")=="13", "timediff"], breaks=seq(0, 7200, 30), xlim=c(0,1200))
-#hist(data[format(data$arrivalTimestamp, "%H")=="19", "timediff"], breaks=seq(0, 7200, 30), xlim=c(0,1200))
+#todos os dados transformados 
+write.csv(data, file="dataFull.csv", row.names = F)
 
+#filtra apenas as chegadas occoridas entre 20:00:00 e 20:59:59
+data <- data[format(data$arrivalTimestamp, "%H")=="20", ]
+write.csv(data, file="data20.csv", row.names = F)
+
+```
+
+Percentual de atendimentos preferenciais: `r sum(data$prefer)/nrow(data)`
+
+##Distribuição de chegada 
+```{r dist_chegada}
 chegadas1 <- 
   ggplot(data, aes(timediff, colour = format(arrivalTimestamp, "%H"))) +
   geom_freqpoly(aes(y = (..count..)/sum(..count..)), binwidth = 30) + 
@@ -67,11 +75,9 @@ chegadas1 <-
   xlab("Intervalo em segundos") +
   labs(colour = "Hora") + 
   scale_y_continuous(labels = percent_format())
-ggsave(filename = "chegadas1.png", plot = chegadas1)
+ggsave(filename = "chegadas120.png", plot = chegadas1)
 
-#cria um arquivo com 5000 amostras para ajuste de curva no easyFit
-write.csv(data[format(data$arrivalTimestamp, "%H")=="19","timediff"], file="chegadas_19.csv")
-
+write.csv(data[,"timediff"], file="chegadasFiltro20.csv")
 chegadas2 <- ggplot(data, aes(timediff)) +
   geom_histogram(aes(y = (..count..)/sum(..count..)), binwidth = 30) + 
   #geom_freqpoly(aes(y = (..count..)/sum(..count..)), binwidth = 30) + 
@@ -79,10 +85,7 @@ chegadas2 <- ggplot(data, aes(timediff)) +
   ylab("Frequência Percentual") +
   xlab("Intervalo em segundos") +
   scale_y_continuous(labels = percent_format())
-ggsave(filename = "chegadas2.png", plot = chegadas2)
-
-#cria um arquivo com 5000 amostras para ajuste de curva no easyFit
-write.csv(sample(data[,"timediff"], 5000), file="chegadas_geral.csv")
+ggsave(filename = "chegadas220.png", plot = chegadas2)
 
 #-> para os dados gerais, EasyFit retornou Fatigue Life (Birnbaum-Saunders) Distribution com shape=1.9434 e scale=50.405
 test <- rbisa(10000, scale=50.405, shape=1.9434)
@@ -108,7 +111,7 @@ chegadas3 <-
   geom_bar(stat = "identity") + 
   ylab("Quantidade de média novos clientes") +
   xlab("Horas do dia")
-ggsave(filename = "chegadas3.png", plot = chegadas3)
+ggsave(filename = "chegadas320.png", plot = chegadas3)
 
 #visualiza intervalo medio de chegada por hora
 chegadas4 <- 
@@ -117,7 +120,7 @@ chegadas4 <-
   ylab("Intervalo médio entre chegadas (hh:mm:ss)") +
   xlab("Horas do dia") +
   scale_y_datetime(labels = date_format("%H:%M:%S"))
-ggsave(filename = "chegadas4.png", plot = chegadas4)
+ggsave(filename = "chegadas420.png", plot = chegadas4)
 ```
 
 ```{r tempo_espera_fila}
@@ -139,7 +142,7 @@ tempo_fila_1 <-
   ylab("Frequência Percentual") +
   xlab("Duração em minutos") +
   scale_y_continuous(labels = percent_format())
-ggsave(filename = "tempo_fila_1.png", plot = tempo_fila_1)
+ggsave(filename = "tempo_fila_120.png", plot = tempo_fila_1)
 ```
 
 ```{r duracao_atendimento}
@@ -166,21 +169,15 @@ duracao_atend <-
   ylab("Frequência Percentual") +
   xlab("Duração em minutos") +
   scale_y_continuous(labels = percent_format(), limits = c(0,0.1))
-ggsave(filename = "duracao_atend.png", plot = duracao_atend)
+ggsave(filename = "duracao_atend20.png", plot = duracao_atend)
 
-write.csv(sample(data[data$validServTime, "servDuration"], 5000), file="duracao_atend.csv")
+write.csv(data[data$validServTime, "servDuration"], file="duracao_atend20.csv")
 
 #Weibull (data without atend < 60)
 #test <- floor(rweibull(10000, 0.85283, scale=705.25) + 60)
 
 #Log normal (data without atend < 60)
 #test <- floor(rlnorm(10000, meanlog=6.0411, sdlog=1.1442) + 41.277)
-
-#Dagum ("all" data)
-test <- floor(rdagum(10000, scale = 818.72, shape1.a=0.39952, shape2.p=1.8476))
-
-#Weibull ("all" data)
-test <- floor(rweibull(10000, shape=0.8045, scale=570.75))
 
 ggplot(data.frame(test), aes(test)) +
   geom_histogram(aes(y = (..count..)/sum(..count..)), binwidth = 60) + 
